--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -141,9 +141,9 @@
     
   
 \newpage  
-\section{From Modeling to Local Search}
-\input{modelsol}
-\newpage
+%\section{From Modeling to Local Search}
+%\input{modelsol}
+%\newpage
 \section{Local Search and Metaheuristics} \label{sec_local}
   \input{lse}
   \subsection{Neighborhoods}
@@ -152,8 +152,8 @@
   \input{sp}
   \subsection{Local Search Algorithms}
   \input{algimp}
-  \subsection{Change in Local Search Design}
-  \input{lschange}
+  %\subsection{Change in Local Search Design}
+  %\input{lschange}
   \newpage
 \section{Tests}
 \input{test}
@@ -162,9 +162,9 @@
 \section{Results}
 \section{Future Work}
   \input{future}
-\section{Conclusion}
-\section{Appendix}
-\input{appendix}
+%\section{Conclusion}
+%\section{Appendix}
+%\input{appendix}
 \bibliographystyle{plain}
 \bibliography{main}
 %\newpage
