--- a/doc/vars.tex
+++ b/doc/vars.tex
@@ -5,5 +5,5 @@ product of $n$ domains $D =  D_1 \times D_2 \times \dots\times D_n $ such that $
 of the models that will be discussed in this thesis all have their domain restricted to a finite discrete domain $D_i 
 \subseteq \mathbb{Z}\ : \: \forall i$.  The value of a variable $x$ is denoted $V(x)$. The number of constraints that 
 apply to a variable $x_i$ is the \emph{degree} of the variable $deg(x_i)$. We say a variable is 
-independent if the value is allowed to change within its domain in contrast to a dependent variable that only changes 
-dependent on other variables change. 
+independent if the value is allowed to change within its domain. A dependent variable is only allowed to change value 
+other variables it is dependent on change value. 
