--- a/doc/style.tex
+++ b/doc/style.tex
@@ -1,7 +1,7 @@
 \newcommand{\method}[1]{\lstinline[basicstyle=\sffamily]{#1}}
 \newcommand{\interface}[1]{\lstinline[basicstyle=\sffamily]{#1}}
 % \newcommand{\class}[1]{\lstinline[basicstyle=\sffamily]{#1}}
-\newcommand{\class}[1]{\textbf{#1}}
+\newcommand{\class}[1]{\textsc{#1}}
 \newcommand{\boste}[1]{{\textbf{\color{blue}(#1)}}}
 \newcommand{\marco}[1]{{\color{red}#1}}
 \newcommand{\Int}[0]{\textbf{int} }
